hw16/kube/deployment.yaml
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: hw16-deployment
spec:
  replicas: 2
  selector:
    matchLabels:
      app: hw16-app
  strategy:
    rollingUpdate:
      maxSurge: 1
      maxUnavailable: 1
    type: RollingUpdate
  template:
    metadata:
      labels:
        app: hw16-app
    spec:
      containers:
        - image: docker.io/library/hw16-app:v1
          imagePullPolicy: IfNotPresent
          name: hw16-app
          ports:
            - containerPort: 8080
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: postgres-deployment
  labels:
    app: postgres-app
spec:
  replicas: 1
  selector:
    matchLabels:
      env: postgres-app
  template:
    metadata:
      labels:
        env: postgres-app
    spec:
      containers:
        - name: postgres-app
          image: postgres:13
          ports:
            - containerPort: 5432
