hw16/kube/service.yaml
---
apiVersion: v1
kind: Service
metadata:
  name: hw16-service
spec:
  ports:
    - port: 80
      targetPort: 8080
  selector:
    app: hw16-app
  type: ClusterIP

---
apiVersion: v1
kind: Service
metadata:
  name: postgres-service
spec:
  selector:
    env: postgres-app
  ports:
    - port: 5432
      targetPort: 5432
